Refactor logging and error handling; enhance test setup and coverage for content and popup scripts

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
       "js"
     ],
     "transform": {},
+    "testEnvironmentOptions": {
+      "customExportConditions": ["node", "jsdom"]
+    },
+    "resetMocks": true,
     "coverageDirectory": "./coverage/",
     "collectCoverageFrom": [
       "content.js",
