--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "A Microsoft Edge and Chrome extension that automatically converts JIRA issue codes to clickable links in GitHub.",
   "main": "content.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -18,14 +19,16 @@
   ],
   "license": "SEE LICENSE IN README.md",
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/chrome": "^0.1.36",
-    "@types/jest": "^29.5.6",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.0.3"
+    "@types/jest": "^30.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.12.2",
+    "globals": "^16.2.0",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "prettier": "^3.8.1"
   },
   "jest": {
     "testEnvironment": "jsdom",
